syntax = "proto3";

option go_package = "go.cluttr.dev/gitlab-exporter/protobuf/typespb";

package gitlabexporter.protobuf;

import "google/protobuf/timestamp.proto";

message Commit {
    string id = 1;
    string short_id = 2;
    repeated string parent_ids = 3;
    int64 project_id = 4;

    string author_name = 5;
    string author_email = 6;
    google.protobuf.Timestamp authored_date = 7;
    string committer_name = 8;
    string committer_email = 9;
    google.protobuf.Timestamp committed_date = 10;
    google.protobuf.Timestamp created_at = 11;
    
    string title = 12;
    string message = 13;
    map<string, string> trailers = 14;

    CommitStats stats = 15;

    string status = 16;
    string web_url = 17;
}

message CommitStats {
    int64 additions = 1;
    int64 deletions = 2;
    int64 total = 3;
}

