syntax = "proto3";

option go_package = "github.com/cluttrdev/gitlab-exporter/protobuf/typespb";

package gitlabexporter.protobuf;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

import "gitlabexporter/protobuf/pipeline.proto";
import "gitlabexporter/protobuf/job.proto";

message Section {
    JobReference job = 1;
    PipelineReference pipeline = 2;
    
    int64 id = 3;
    string name = 4;
    
    google.protobuf.Timestamp started_at = 10;
    google.protobuf.Timestamp finished_at = 11;
    google.protobuf.Duration duration = 12;
}
